chore: Major project configuration update
- Update all dependencies to latest versions and fix security vulnerabilities
- Upgrade TypeScript to v5 with strict configuration
- Add ESLint and Prettier for code quality
- Add Docker configuration for containerized deployment
- Add environment variables example file
- Update .gitignore with comprehensive exclusions
- Replace deprecated packages (request → axios, mysql → mysql2)
- Add modern development tools (nodemon, ts-node)
- Configure testing setup with Jest and ts-jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,52 @@
 {
     "compilerOptions": {
-        "target": "esnext",
+        "target": "ES2022",
         "module": "commonjs",
-        "declaration": true,
-        "outDir": "dist",
+        "lib": ["ES2022"],
+        "outDir": "./dist",
+        "rootDir": "./src",
         "strict": true,
-        "allowSyntheticDefaultImports": true,
-        "resolveJsonModule": true,
         "esModuleInterop": true,
+        "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "moduleResolution": "node",
+        "allowJs": false,
+        "declaration": true,
+        "declarationMap": true,
         "sourceMap": true,
-        "allowJs": true,
-        "checkJs": true
+        "removeComments": true,
+        "noEmitOnError": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
+        "strictBindCallApply": true,
+        "strictPropertyInitialization": true,
+        "noImplicitThis": true,
+        "alwaysStrict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUncheckedIndexedAccess": true,
+        "noImplicitOverride": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "allowUnusedLabels": false,
+        "allowUnreachableCode": false,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true
     },
     "include": [
-        "src/**/*.ts",
-        "src/**/*.js"
-    ]
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist",
+        "**/*.spec.ts",
+        "**/*.test.ts"
+    ],
+    "ts-node": {
+        "transpileOnly": true,
+        "files": true
+    }
 }
