--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+.pnpm-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -25,12 +26,6 @@ coverage
 # nyc test coverage
 .nyc_output
 
-# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
-# Bower dependency directory (https://bower.io/)
-bower_components
-
 # node-waf configuration
 .lock-wscript
 
@@ -41,14 +36,6 @@ build/Release
 node_modules/
 jspm_packages/
 
-<<<<<<< HEAD
-# TypeScript v1 declaration files
-typings/
-=======
-# Snowpack dependency directory (https://snowpack.dev/)
-web_modules/
->>>>>>> 3e743494514a11be7515b523f025afbd5b9cbd44
-
 # TypeScript cache
 *.tsbuildinfo
 
@@ -57,6 +44,9 @@ web_modules/
 
 # Optional eslint cache
 .eslintcache
+
+# Optional stylelint cache
+.stylelintcache
 
 # Microbundle cache
 .rpt2_cache/
@@ -73,47 +63,37 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# dotenv environment variable files
 .env
-.env.test
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
-<<<<<<< HEAD
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-# Comment in the public line in if your project uses Gatsby and *not* Next.js
-=======
 .parcel-cache
 
-# Next.js build output
-.next
-out
+# Build directories
+dist
+build
+archive
 
-# Nuxt.js build / generate output
-.nuxt
-dist/
-archive/
+# IDE and editor directories
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
 .DS_Store
-.idea
-
-# Gatsby files
-.cache/
-# Comment in the public line in if your project uses Gatsby and not Next.js
->>>>>>> 3e743494514a11be7515b523f025afbd5b9cbd44
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
-
-# vuepress build output
-.vuepress/dist
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Serverless directories
 .serverless/
@@ -126,8 +106,6 @@ archive/
 
 # TernJS port file
 .tern-port
-<<<<<<< HEAD
-=======
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
@@ -139,5 +117,21 @@ archive/
 .yarn/install-state.gz
 .pnp.*
 
+# Package lock files (keeping only package-lock.json)
+yarn.lock
+pnpm-lock.yaml
 
->>>>>>> 3e743494514a11be7515b523f025afbd5b9cbd44
+# Test related
+jest_html_reporters.html
+test-results/
+
+# Temporary files
+tmp/
+temp/
+
+# Database files
+*.sqlite
+*.sqlite3
+
+# AWS
+.aws/
