--- a/package.json
+++ b/package.json
@@ -1,71 +1,62 @@
 {
   "name": "chobo-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A driving practice tracking service for novice drivers",
+  "main": "dist/app.js",
   "license": "ISC",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon --exec babel-node -- src/app.ts --extensions .ts,.js",
-    "build": "npm run bundle",
-    "bundle": "babel-node build.js"
+    "dev": "nodemon",
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.{ts,js,json}\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
-  "keywords": [],
+  "keywords": ["driving", "tracking", "novice", "chobo"],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.13.10",
-    "@types/body-parser": "^1.19.0",
-    "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.22",
-    "@types/knex": "^0.16.1",
-    "@types/request": "^2.48.5",
-    "@types/request-promise-native": "^1.0.17",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "archiver": "^3.1.1",
-    "babel-eslint": "^10.1.0",
-    "body-parser": "^1.19.0",
-    "debug": "^4.3.1",
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-flowtype": "^5.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "express": "^4.17.1",
-    "fs-extra": "^8.1.0",
-    "jest": "^26.6.3",
-    "jest-environment-node": "^26.6.2",
-    "jest-matcher-deep-close-to": "^2.0.1",
-    "knex": "^0.95.4",
-    "listr": "^0.14.3",
-    "moment": "^2.29.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.7",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9",
-    "typescript": "^4.2.3"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "knex": "^3.1.0",
+    "mysql2": "^3.6.5",
+    "moment": "^2.30.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "axios": "^1.6.5",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^7.1.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.14",
-    "@babel/node": "^7.13.13",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.5",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
-    "@babel/plugin-proposal-function-sent": "^7.12.13",
-    "@babel/plugin-proposal-numeric-separator": "^7.12.13",
-    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/plugin-proposal-throw-expressions": "^7.12.13",
-    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-typescript": "^7.13.0",
-    "@babel/register": "^7.13.14"
+    "@types/node": "^20.10.6",
+    "@types/express": "^4.17.21",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/compression": "^1.7.5",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.0",
+    "@types/jest": "^29.5.11",
+    "typescript": "^5.3.3",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "@typescript-eslint/parser": "^6.16.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "prettier": "^3.1.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
